--- a/index.html
+++ b/index.html
@@ -82,12 +82,16 @@
             <h1 class="home__title">Hola, soy Alan Yeverino</h1>
             <p class="home__description">
               Soy desarrollador web, machine learning enthusiastic y admirador
-              de la tecnologia.
+              de las nuevas y antiguas tecnologias.
             </p>
           </div>
 
           <div class="home__buttons">
-            <button class="btn btn--primary" type="button">Descarga CV</button>
+            <button class="btn btn--primary" type="button">
+              <a href="https://lanyev.github.io/CV-2.0/" target="_blank"
+                >Mira mi CV</a
+              >
+            </button>
           </div>
         </div>
       </section>
@@ -126,6 +130,13 @@
                 <h3 class="about__card-title">JavaScript</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
               </div>
+              <!--Card 4 -->
+              <div class="about__card">
+                <i class="bx bx-images"></i>
+
+                <h3 class="about__card-title">Stabled Diffusion</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+              </div>
             </div>
 
             <div class="about__tags">
@@ -137,6 +148,8 @@
                 <span class="about__tag">Puntual</span>
                 <span class="about__tag">Proactivo</span>
                 <span class="about__tag">Autodidacta</span>
+                <span class="about__tag">Proactivo</span>
+                <span class="about__tag">Inovacion</span>
               </div>
             </div>
           </div>
