--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- jQuery -->
     <script
       type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"
     ></script>
     <script src="assets/js/image.js"></script>
   </head>
