add image default/reverted

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="home__container grid--container">
           <div id="banner-load" class="home__image">
             <span></span>
-            <img class="alan_image" src="assets/img/alanCard0.png" alt="" />
+            <!-- <img class="alan_image" src="assets/img/alanCard0.png" alt="" /> -->
           </div>
 
           <ul class="home__social">
