--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
       </section>
 
-      <section id="about" class="about section">
+      <section id="about" class="about-section">
         <h2 class="section__title">Acerca de Mí</h2>
 
         <div class="about__container grid--container">
