change phone number xD

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
               <div class="contact__info-item">
                 <i class="bx bx-phone"></i>
 
-                <span class="contact__info-nomber"> +52 656 3655569 </span>
+                <span class="contact__info-nomber"> +00 999 999 999 </span>
               </div>
 
               <div class="contact__info-item">
